# d2a

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.en.md  README.md  README.中文.md  config.example.toml  config.toml.example  docker-compose.yml  entrypoint.sh  justfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  release.yml
docker/: Dockerfile  docker-compose.yaml
docs/: CORE.md  deepseek-prompt-injection.md  development.md
docs/en/: code-style.md  deepseek-api-reference.md  development.md
py-e2e-tests/: config.toml  conftest.py  pyproject.toml  runner.py  test_auth.py  test_chat_completions.py  test_models.py  test_tools.py
src/: anthropic_compat.rs  config.rs  ds_core.rs  lib.rs  main.rs  openai_adapter.rs  server.rs
src/anthropic_compat/: request.rs  types.rs
src/anthropic_compat/response/: stream.rs
src/deepseek_web_api/: __init__.py
src/deepseek_web_api/api/: chat_completions_service.py  routes.py  v0_service.py
src/deepseek_web_api/core/: auth.py  config.py  local_api_auth.py  pow.py  server_security.py  session_store.py
src/ds_core/: accounts.rs  client.rs  completions.rs  pow.rs
src/openai_adapter/: models.rs  request.rs  response.rs  types.rs
src/openai_adapter/request/: model.rs  normalize.rs  prompt.rs  resolver.rs  tools.rs
src/openai_adapter/response/: converter.rs  state.rs  tool_parser.rs
src/server/: admin.rs  auth.rs  error.rs  handlers.rs  runtime_log.rs  stats.rs  store.rs
tests/api/: test_routes.py  test_v0_service.py
tests/api/test_chat_completions/: test_messages.py  test_route.py  test_service.py  test_session_pool.py  test_tools.py
tests/core/: test_auth.py  test_parent_msg_store.py  test_pow.py  test_server_security.py
tests/smoke/: test_core.py  test_v0_api.py  test_v1_chat_completions.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/lib/: api.ts  auth.tsx
web/src/pages/: AccountsPage.tsx  ApiKeysPage.tsx  ConfigPage.tsx  DashboardPage.tsx  Layout.tsx  LoginPage.tsx  LogsPage.tsx  ModelsPage.tsx
(+7 files in other folders)
